--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-      "start": "json-server --watch db.json --port 3000"
+      "start": "json-server --watch db.json --host 0.0.0.0 --port 10000"
     },
     "dependencies": {
       "json-server": "^0.17.0"
