--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
     "name": "flatdango-server",
     "version": "1.0.0",
-    "main": "index.js",
+    "description": "JSON Server for Flatdango Movie App",
+    "main": "server.js",
     "scripts": {
-      "start": "json-server --watch db.json --host 0.0.0.0 --port 10000"
+      "start": "json-server --watch db.json --host 0.0.0.0 --port $PORT"
     },
     "dependencies": {
       "json-server": "^0.17.0"
+    },
+    "engines": {
+      "node": ">=14"
     }
   }
   
